--- a/week-01/trainning.ipynb
+++ b/week-01/trainning.ipynb
@@ -799,7 +799,7 @@
    "source": [
     "Observing correlation between `petal_length` and `petal_width` it is easy to group different species. It is also observed in correlation between `petal_length` and `sepal_width`.\n",
     "\n",
-    "Observando a correlação entre `petal_length` e `petal_width`, é fácil agrupar diferentes espécies. Também é observado em correlação entre `petal_length` e `sepal_width`."
+    "Observando a correlação entre `petal_length` e `petal_width`, é fácil agrupar as  diferentes espécies. Também é possível observar na correlação entre `petal_length` e `sepal_width`."
    ]
   }
  ],
