--- a/week-02/iris_data_regression.ipynb
+++ b/week-02/iris_data_regression.ipynb
@@ -36,7 +36,7 @@
    "source": [
     "import pandas as pd\n",
     "\n",
-    "data = pd.read_csv('Iris_Data.csv')"
+    "data = pd.read_csv('./data/Iris_Data.csv')"
    ]
   },
   {
