--- a/week-02/Week2_Supervised_Learning_and_K_Nearest_Neighbors_HW_result.ipynb
+++ b/week-02/Week2_Supervised_Learning_and_K_Nearest_Neighbors_HW_result.ipynb
@@ -60,7 +60,7 @@
     "\n",
     "# Import the data using the file path\n",
     "# filepath = os.sep.join(data_path + ['Orange_Telecom_Churn_Data.csv'])\n",
-    "data = pd.read_csv('Orange_Telecom_Churn_Data.csv')"
+    "data = pd.read_csv('./data/Orange_Telecom_Churn_Data.csv')"
    ]
   },
   {
